--- a/assets/css/partials/variables.scss
+++ b/assets/css/partials/variables.scss
@@ -11,6 +11,8 @@
   --color-white: #FFFFFF;
   --color-gray: #706c61;
   --color-red: #FF0000;
+  --color-primary: #BC9659;
+  --bg-primary: #020000;
 }
 
 @mixin inputPlaceholder() {
